--- a/front.html
+++ b/front.html
@@ -1,6 +1,6 @@
 <html>
   <head>
-    <title>JS Array CRUD - http://codeofaninja.com</title>
+    <title></title>
     <link rel="stylesheet" href="style.css" />
   </head>
     
