--- a/front.html
+++ b/front.html
@@ -13,30 +13,17 @@
 
     <div id="actions">
 
-       <form class="enter" action="#">
-      New Entry: <input type="text" name="new">
-      <input type="button" id="enter" value="Enter">
+       <form class="enter" action="#" id="addrowform">
+      <input type="button" id="addrow" value="Add Row">
       </form>
 
-      <form class="choose" action="#">
-      Edit Entry: <input type="text" name="new">
-      <input type="button" id="choose" value="Edit">
-      </form>
-
-      <form class="delete" action="#">
-      Delete Entry: <input type="text" name="new">
-      <input type="button" id="delete" value="Delete">
-      </form>
-
-      <form class="refresh">
-      <input  type="button" onClick="history.go(0)" value="Refresh Page">
-      </form>
+    
 
     </div>
     <div id ="results">
       <div id="results"></div>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.11.3/jquery.min.js"></script>
-    <script type="text/javascript" src="jsget.js"></script>
+    <script type="text/javascript" src="view.js"></script>
   </body>
 </html>
        
